Created SpotifyTokenService and SpotifyAPIService unit tests